fix(match2): alignement of column content on BR

--- a/stylesheets/commons/BattleRoyale/PanelTable.less
+++ b/stylesheets/commons/BattleRoyale/PanelTable.less
@@ -160,7 +160,7 @@ Author(s): Elysienna
 		&-grouped {
 			display: flex;
 			align-items: center;
-			justify-content: center;
+			justify-content: inherit;
 			flex-basis: 100%;
 		}
 
